--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
     "@schematichq/schematic-react": "^1.2.4",
     "next": "15.3.1",
     "react": "^19.0.0",
