--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "@schematichq/schematic-components": "^0.7.13",
     "@schematichq/schematic-react": "^1.2.4",
+    "@schematichq/schematic-typescript-node": "^1.1.10",
+    "@stripe/react-stripe-js": "^3.7.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
